--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "supertest": "^6.1.3"
   },
   "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/readytowin2298/messagely.git"
+  },
+  "bugs": {
+    "url": "https://github.com/readytowin2298/messagely/issues"
+  },
+  "homepage": "https://github.com/readytowin2298/messagely#readme",
   "description": ""
 }
